--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"grunt-contrib-nodeunit": "~1.0.0",
 		"grunt-contrib-uglify": "~1.0.1",
 		"grunt-contrib-clean": "~1.0.0",
-		"grunt-contrib-concat": "~1.0.1"
+		"grunt-contrib-concat": "~1.0.1",
+		"linebyline": "~1.3.0"
 	}
 }
