--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"grunt-contrib-uglify": "~1.0.1",
 		"grunt-contrib-clean": "~1.0.0",
 		"grunt-contrib-concat": "~1.0.1",
-		"linebyline": "~1.3.0"
+		"linebyline": "~1.3.0",
+		"walk": "~2.3.9"
 	}
 }
